external-crates/move/crates/move-compiler/tests/move_2024/typing/macro_arg_by_name_strange_usage_fields.exp
error[E03006]: unexpected name in this position
  ┌─ tests/move_2024/typing/macro_arg_by_name_strange_usage_fields.move:8:10
  │
8 │         &$s.f;
  │          ^^ Macro parameters are not allowed to appear in paths
  │
  = To use a macro parameter as a value in a path expression, first bind it to a local variable, e.g. 'let s = $s;'
  = Macro parameters are always treated as value expressions, and are not modified by path operations.
    Path operations include 'move', 'copy', '&', '&mut', and field references

error[E03006]: unexpected name in this position
  ┌─ tests/move_2024/typing/macro_arg_by_name_strange_usage_fields.move:9:14
  │
9 │         &mut $s.f;
  │              ^^ Macro parameters are not allowed to appear in paths
  │
  = To use a macro parameter as a value in a path expression, first bind it to a local variable, e.g. 'let s = $s;'
  = Macro parameters are always treated as value expressions, and are not modified by path operations.
    Path operations include 'move', 'copy', '&', '&mut', and field references

